--- a/MyWebsite/Pages/Index.cshtml
+++ b/MyWebsite/Pages/Index.cshtml
@@ -8,3 +8,23 @@
     <h1 class="display-3">Portfolio</h1>
     <h2 class="display-4">Maciej Gielert</h2>
 </div>
+
+
+<div class="container" style="margin-top:30px">
+    <div class="row">
+        <div class="col-sm-3 m-3 bg-light rounded">
+            <h3 class="font-weight-light">My GitHub Profile</h3>
+            @foreach (var githubprofile in Model.GithubProfiles)
+            {
+                <img src="@githubprofile.Avatar_url" class=" mx-auto rounded" style="width:25%" alt="GitImg">
+                <h4 class="font-weight-light">@githubprofile.Login</h4>
+                <h4 class="font-weight-light">Repos count: @githubprofile.Repos_number</h4>
+                <a href="@githubprofile.Html_url" class="font-weight-light">Link to profile</a>
+            }
+        </div>
+        <div class="col-sm-8 m-3 bg-light rounded">
+            <h3 class="font-weight-light">My Projects</h3>
+            Unity C# game
+        </div>
+    </div>
+</div>
